# qt-video-wlr

./: .gitignore  LICENSE  README.md  meson.build  qt-video-wlr-bg.cpp
